<resources>
    <string name="app_name">Text Editor</string>
    <string name="text_hint">Enter the text to be formatted</string>
    <string name="action_settings">Settings</string>
    <string name="instructions">Formatting options: </string>
    <string name="colour">Colour:</string>
    <string-array name="colours">
        <item>Black</item>
        <item>Blue</item>
        <item>Cyan</item>
        <item>Gray</item>
        <item>Green</item>
        <item>Magenta</item>
        <item>Red</item>
        <item>Yellow</item>
        <item>White</item>
    </string-array>
    <string name="size">Size:</string>
    <string name="bold">Bold</string>
    <string name="italics">Italics</string>
    <string name="newtext">NEW TEXT</string>
    <string name="title_activity_modify_font">Formatted Text</string>
    <string name="reset">Format again</string>
    <string name="exit">Goodbye!</string>
</resources>
