<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/target_text"
        android:hint="@string/text_hint"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:textSize="25sp"
        android:layout_below="@+id/target_text"
        android:id="@+id/instructions" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:id="@+id/colour"
        android:text="@string/colour"
        android:layout_below="@+id/instructions"
        />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_colour"
        android:layout_below="@+id/instructions"
        android:layout_toRightOf="@+id/colour"
        android:layout_toEndOf="@+id/colour"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:id="@+id/size"
        android:text="@string/size"
        android:layout_below="@id/colour"
        android:paddingTop="30dp"
        />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_size"
        android:paddingTop="30dp"
        android:layout_below="@id/colour"
        android:layout_alignStart="@id/spinner_colour"
        android:layout_alignLeft="@id/spinner_colour"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bold"
        android:layout_below="@id/spinner_size"
        android:id="@+id/bold_box"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/italics"
        android:layout_below="@id/bold_box"
        android:id="@+id/italics"
        />
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/italics"
        android:id="@+id/font_list"/>

</RelativeLayout>
